ci: Use postgres-plus:17 image and follow constructive pattern
- Switch to ghcr.io/constructive-io/docker/postgres-plus:17 image
- Add concurrency settings to cancel in-progress runs
- Add workflow_dispatch for manual triggers
- Add develop branch to triggers
- Update password to match constructive pattern
- Move env vars to job level

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,32 +1,47 @@
-name: Tests
+name: pysql-test CI
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - develop
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}-run-tests
+  cancel-in-progress: true
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
+    env:
+      PGHOST: localhost
+      PGPORT: 5432
+      PGUSER: postgres
+      PGPASSWORD: password
+
     services:
-      postgres:
-        image: postgres:17
+      pg_db:
+        image: ghcr.io/constructive-io/docker/postgres-plus:17
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
+          POSTGRES_PASSWORD: password
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -50,9 +65,4 @@ jobs:
         run: poetry run mypy src --ignore-missing-imports
 
       - name: Run tests
-        env:
-          PGHOST: localhost
-          PGPORT: 5432
-          PGUSER: postgres
-          PGPASSWORD: postgres
         run: poetry run pytest -v
