fix: Skip pgpm tests in regular workflow and add verbose logging
- Exclude tests/test_pgpm_integration.py from regular test workflow
  (pgpm CLI not installed in that workflow)
- Add --verbose flag to pgpm deploy for better debugging
- Log stdout and stderr from pgpm deploy for troubleshooting

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,4 +65,4 @@ jobs:
         run: poetry run mypy src --ignore-missing-imports
 
       - name: Run tests
-        run: poetry run pytest -v
+        run: poetry run pytest -v --ignore=tests/test_pgpm_integration.py
