debug: Enable verbose logging in pgpm integration tests
Add -s and --log-cli-level=INFO to pytest to capture pgpm deploy output

--- a/.github/workflows/test-pgpm.yml
+++ b/.github/workflows/test-pgpm.yml
@@ -86,4 +86,4 @@ jobs:
           pgpm admin-users add --test --yes
 
       - name: Run pgpm integration tests
-        run: poetry run pytest tests/test_pgpm_integration.py -v
+        run: poetry run pytest tests/test_pgpm_integration.py -v -s --log-cli-level=INFO
