docs: Update README with pgpm integration guide and rename to pgsql-test
- Rename package from pysql-test to pgsql-test
- Add prominent pgpm Integration section with detailed usage examples
- Add pgpm workspace structure documentation
- Add seed.pgpm() parameters table
- Add GitHub Actions example workflow for pgpm testing
- Add Related Projects section linking to pgsql-test (TS) and pgpm
- Update repository URLs to pgsql-test-python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "pysql-test"
+name = "pgsql-test"
 version = "0.1.0"
 description = "PostgreSQL testing framework for Python - instant, isolated databases with automatic transaction rollback"
 authors = ["Constructive <developers@constructive.io>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/constructive-io/pysql"
-repository = "https://github.com/constructive-io/pysql"
+homepage = "https://github.com/constructive-io/pgsql-test-python"
+repository = "https://github.com/constructive-io/pgsql-test-python"
 keywords = ["postgres", "postgresql", "testing", "pytest", "database", "integration-tests"]
 classifiers = [
     "Development Status :: 4 - Beta",
