Rename pysql_test to pgsql_test to match project name
- Renamed src/pysql_test/ directory to src/pgsql_test/
- Updated all Python imports from pysql_test to pgsql_test
- Updated pyproject.toml package name and ruff config
- Updated workflow name from pysql-test CI to pgsql-test CI
- Updated test assertions to use pgsql_test_ prefix
- Updated documentation and comments throughout
- Updated test fixtures (package.json, pgpm.plan, etc.)

The package name 'pgsql-test' in pyproject.toml was already correct,
but the importable module name was inconsistent (pysql_test vs pgsql_test).
This change aligns the module name with the package and repository name.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Topic :: Database",
     "Topic :: Software Development :: Testing",
 ]
-packages = [{include = "pysql_test", from = "src"}]
+packages = [{include = "pgsql_test", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -58,7 +58,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["pysql_test"]
+known-first-party = ["pgsql_test"]
 
 [tool.mypy]
 python_version = "3.10"
